# GitGenie

./: .env  README.md  package-lock.json
backend/: index.js  package-lock.json  package.json
backend/modules/: commit.js
cli/: README.md
cli/src/: .env  CHANGELOG.md  gitgenie.py  gitgeniecli-0.1.0-py3-none-any.whl  script.py  test.py
cli/src/docs/changes/: 2025-10-25_05-45-40.md  2025-10-28_18-19-00.md
gitgenie/: README.md  pyproject.toml
website/: package-lock.json  package.json
website/src/: App.css  App.jsx
website/src/pages/: Dashboard.jsx  Tween.jsx  URL.jsx  User.jsx
