[project]
name = "gitgenie"
version = "0.1.0"
description = ""
authors = [
    {name = "Aaryan-Bidaye",email = "94824629+Aaryan-Bidaye@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer (>=0.20.0,<0.21.0)"
]


[tool.poetry]
packages = [{include = "gitgenie", from = "src"}]

[tool.poetry.scripts]
gcg = "gitgenie.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
